# data-engineering-project

./: .gitignore  .tool-versions  README.md  docker-compose.yml  pyproject.toml
data/: last_processed.json
src/kafka_client/: kafka_stream_data.py
