[tool.poetry]
name = "data-engineering-project"
version = "0.1.0"
description = ""
authors = ["Robert Pate <robert.pate@ezcater.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
kafka-python = "2.0.2"
psycopg2-binary = "2.9.9"
pyspark = "3.5.0"
apache-airflow = "2.7.3"
unidecode = "1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
